# concept-probe

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.tmp_wheels/: concept_probe-0.1.0-py3-none-any.whl
examples/: quickstart.py  train_from_json.py
tests/: test_examples.py  test_public_api.py  test_reporting.py
